# BinaryMapper

./: CMakeLists.txt  README.md
.github/workflows/: .github.yml
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/driver_example/: CMakeLists.txt  Kbuild.in  driver_example.c
examples/example/: main.cpp
examples/py_example/: py_example.py
examples/sh_example/: sh_example.sh
examples/test_exec/: CMakeLists.txt
examples/test_export/src/: gettime.cpp
include/: BinaryData.h  BinaryObject.h
modules/BinaryMapper/: CMakeLists.txt
modules/BinaryMapper/include/: ApplicationObject.h  BinaryMapper.h  BinaryObjectImpl.h  ExecType.h  LibraryObject.h  ModuleObject.h  Utils.h
modules/BinaryMapper/src/: ApplicationObject.cpp  ApplicationObject.h  BinaryData.cpp  BinaryData.h  BinaryMapper.cpp  BinaryMapper.h  BinaryObject.h  ExecType.cpp  ExecType.h  LibraryObject.cpp  LibraryObject.h  ModuleObject.cpp  ModuleObject.h  Utils.cpp  Utils.h
modules/common/: CMakeLists.txt
modules/common/include/: CallData.h
modules/test_exec/: main.cpp
modules/test_export/: CMakeLists.txt
modules/test_export/src/: gettime.c
src/: Application.cpp  Application.h  ApplicationObject.cpp  ApplicationObject.h  BinaryData.h  BinaryMapper.cpp  BinaryMapper.h  BinaryObject.cpp  BinaryObjectImpl.h  HttpServer.cpp  HttpServer.h  LibraryObject.cpp  ModuleObject.cpp  RequestHandler.cpp  RequestHandler.h  Utils.cpp  Utils.h  main.cpp
